[package]
name = "seeyou-cup"
version = "0.3.1"
description = "A Rust library for parsing and writing SeeYou CUP files, commonly used in aviation and gliding for waypoint and task data"
license = "MIT OR Apache-2.0"
repository = "https://github.com/glide-rs/seeyou-cup"
edition = "2024"
exclude = [".github/*", "docs/*", "examples/*", "proptest-regressions/*", "tests/*", ".gitignore"]

[dependencies]
csv = "1.3.1"
encoding_rs = "0.8.35"
thiserror = "2.0.17"

[dev-dependencies]
claims = "=0.8.0"
insta = "=1.43.2"
proptest = "=1.8.0"

[package.metadata.release]
pre-release-commit-message = "Release v{{version}}"
tag-message = ""
# Disable `cargo publish` since we use CI for publishing
publish = false
